--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,4 +11,9 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+  <ion-list>
+    <button ion-item *ngFor="let item of items" (click)="goToDetailPage(item)">
+      {{ item.title }}
+    </button>
+  </ion-list>
 </ion-content>
